# qemu-camp-2026-exper-silicalet

./: .gitignore  flake.nix  riscv64-tcg-tests-summary.md
hw/gpio/: Kconfig
hw/riscv/: Kconfig  g233.c
hw/ssi/: Kconfig  g233_spi.c
hw/timer/: Kconfig
hw/watchdog/: Kconfig
include/hw/gpio/: g233_gpio.h
include/hw/ssi/: g233_spi.h
include/hw/timer/: g233_pwm.h
include/hw/watchdog/: g233_wdt.h
rust/hw/: Kconfig  meson.build
rust/hw/gpio/: Kconfig  meson.build
rust/hw/gpio/g233_gpio/: Cargo.toml  meson.build
rust/hw/gpio/g233_gpio/src/: lib.rs
rust/hw/timer/: Kconfig  meson.build
rust/hw/timer/g233_pwm/: Cargo.toml  meson.build
rust/hw/timer/g233_pwm/src/: lib.rs
rust/hw/watchdog/: Kconfig  meson.build
rust/hw/watchdog/g233_wdt/: Cargo.toml  meson.build
rust/hw/watchdog/g233_wdt/src/: lib.rs
