[package]
name = "g233_pwm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
bql = { path = "../../../../bql" }
common = { path = "../../../../common" }
hwcore = { path = "../../../core" }
qom = { path = "../../../../qom" }
system = { path = "../../../../system" }
util = { path = "../../../../util" }
